# gemini-alpha

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/bot/: Dockerfile  config.py  database.py  main.py  pyproject.toml  railway.toml  requirements.txt  tui.py
apps/bot/api/: __init__.py
apps/bot/core/: __init__.py  graph.py  state.py
apps/bot/models/: __init__.py  asset.py  base.py  candle.py  council.py  onchain.py  portfolio.py  scaled_position.py  sentiment.py  system_config.py  trade.py
apps/bot/nodes/: __init__.py  master.py  sentiment.py  technical.py  vision.py
apps/bot/scripts/: __init__.py  seed_assets.py  test_atr.py  test_full_council.py  test_graph.py  test_vision.py  verify_seed.py
apps/bot/services/: __init__.py  allocation_manager.py  asset_filters.py  asset_universe.py  average_price.py  basket_manager.py  chart_generator.py  contrarian_score.py  correlation_tracker.py  cryptopanic.py  cryptoquant_client.py  data_loader.py  decision_logic.py  drawdown_tracker.py  exceptions.py  execution.py  factor_checkers.py  fear_greed.py  kraken.py  kraken_execution.py  lunarcrush.py  market_regime.py  master_prompts.py  multi_factor_analyzer.py  onchain_analyzer.py  onchain_ingestor.py  opportunity_scanner.py  position_manager.py  regime_adjustments.py  reversal_detector.py  risk.py  risk_status.py  risk_validator.py  safety.py  santiment_client.py  scale_in_manager.py  scale_out_manager.py  scheduler.py  sentiment.py  sentiment_utils.py  (+7 more)
apps/bot/tests/: __init__.py  test_asset_universe.py  (+41 more)
(+115 files in other folders)
